@@ -1,3 +1,7 @@
+[B]2.2.2[/B]
+• Add support for Kodi Log Uploader addon
+• Minor fixes
+
 [B]2.2.1[/B]
 • Changes for Kodi 18
 • Add 'All channels' and 'All radios' widgets
